# bio-fmi

./: .gitignore  CMakeLists.txt  INSTALL.sh  README.md  parser.cpp  parser.h  requirements.txt  run.py
helpScripts/: aln_to_plain.py  create_EDS.py  create_pseudoDNA.py  genedspatterrns.py  genpatterns
scripts/: CMakeLists.txt  locate.cpp
scripts/index/: index.h
scripts/src/: CMakeLists.txt  build.cpp  locate.cpp  stats.cpp  transform.cpp
scripts/src/utils/: eds.cpp  eds.h  index.cpp  utils.hpp
scripts/test/: CMakeLists.txt  test.0c.leds  test.3c.leds  test.3l.leds  test.5c.leds  test.5l.leds  test.eds  test.msa  test_transform.cpp
src/: bio-fmi-build.cpp  bio-fmi-createEDS.cpp  bio-fmi-locate.cpp
src/index/: Bio_FMi.cpp  Bio_FMi.h  Bio_FMi.txt.  Bio_FMi_olc.txt  aln.cpp  aln.h  eds.cpp  eds.h
src/tests/: text.aln  text.eds  text.pattern.txt  text.txt
src/tests/test1/: changes.peds  input.eds  reference.peds
src/utils/: Config.h  Informations_signs.h  utils.hpp
tests/: CMakeLists.txt
tests/parser/1/: changes.peds  input.eds  o_reference.peds
tests/parser/2/: changes.peds  input.eds  reference.peds
